--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,14 +21,7 @@
 @import url(headers/header.css);
 
 /*Import Footers*/
-@import url(footers/footer-default.css);
-@import url(footers/footer-v1.css);
-@import url(footers/footer-v2.css);
-@import url(footers/footer-v3.css);
-@import url(footers/footer-v4.css);
-@import url(footers/footer-v5.css);
-@import url(footers/footer-v6.css);
-@import url(footers/footer-v7.css);
+@import url(footers/footer.css);
 
 /*Import Google Font*/
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
