--- a/public/css/app_aucolors.css
+++ b/public/css/app_aucolors.css
@@ -8,6 +8,8 @@
 
 /*Reset Styles
 ------------------------------------*/
+
+/*Colors changed to AU colors*/
 * {
    border-radius: 0 !important;
 }
@@ -57,12 +59,12 @@ h6 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #585f69;    
+  color: #585f69;
   margin-top: 5px;
-  text-shadow: none; 
-  font-weight: normal; 
+  text-shadow: none;
+  font-weight: normal;
   font-family: 'Open Sans', sans-serif;
-} 
+}
 
 h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
    margin-right: 5px;
@@ -79,8 +81,8 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
   font-size: 22px;
 }
 
-.headline h2, 
-.headline h3, 
+.headline h2,
+.headline h3,
 .headline h4 {
   margin: 0 0 -2px 0;
   padding-bottom: 5px;
@@ -108,10 +110,10 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
   line-height: 34px !important; /*For Tagline Boxes*/
 }
 
-.heading h2:before, 
+.heading h2:before,
 .heading h2:after {
   content: ' ';
-  width: 70%;  
+  width: 70%;
   position: absolute;
   border-width: 1px;
   border-color: #bbb;
@@ -126,9 +128,9 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
 }
 
 @media (max-width: 768px) {
-  .heading h2:before, 
+  .heading h2:before,
   .heading h2:after {
-    width: 20%;  
+    width: 20%;
   }
 }
 
@@ -219,7 +221,7 @@ h3.heading-xs {
   margin-bottom: 60px;
 }
 
-.title-v1 h1, 
+.title-v1 h1,
 .title-v1 h2 {
   color: #444;
   font-size: 28px;
@@ -230,7 +232,7 @@ h3.heading-xs {
   font-family: 'Open Sans', sans-serif;
 }
 
-.title-v1 h1:after, 
+.title-v1 h1:after,
 .title-v1 h2:after {
   bottom: 0;
   left: 50%;
@@ -239,7 +241,7 @@ h3.heading-xs {
   content: " ";
   margin-left: -35px;
   position: absolute;
-  background: #72c02c;  
+  background: #72c02c;
 }
 
 .title-v1 p {
@@ -560,7 +562,7 @@ h3.title-v3-xs {
    opacity: 0.6;
    background: #000;
    margin-top: -18px;
-   padding: 2px 12px; 
+   padding: 2px 12px;
    position: absolute;
 }
 .carousel-v1 .carousel-arrow a i:hover {
@@ -603,7 +605,7 @@ h3.title-v3-xs {
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;    
+  transition: all 0.4s ease-in-out;
 }
 
 .carousel-v2 .carousel-control.left {
@@ -628,46 +630,46 @@ h3.title-v3-xs {
 @media (min-width: 768px) {
   .carousel-indicators {
     bottom: 10px;
-  }  
+  }
 }
 
 /*Tabs
 ------------------------------------*/
 /*Tabs v1*/
-.tab-v1 .nav-tabs { 
+.tab-v1 .nav-tabs {
   border: none;
   background: none;
-  border-bottom: solid 2px #72c02c;   
+  border-bottom: solid 2px #72c02c;
 }
 
-.tab-v1 .nav-tabs a { 
+.tab-v1 .nav-tabs a {
   font-size: 14px;
-  padding: 5px 15px; 
+  padding: 5px 15px;
 }
 
-.tab-v1 .nav-tabs > .active > a, 
-.tab-v1 .nav-tabs > .active > a:hover, 
-.tab-v1 .nav-tabs > .active > a:focus { 
+.tab-v1 .nav-tabs > .active > a,
+.tab-v1 .nav-tabs > .active > a:hover,
+.tab-v1 .nav-tabs > .active > a:focus {
   color: #fff;
-  border: none; 
-  background: #72c02c; 
+  border: none;
+  background: #72c02c;
 }
 
-.tab-v1 .nav-tabs > li > a { 
+.tab-v1 .nav-tabs > li > a {
   border: none;
 }
-.tab-v1 .nav-tabs > li > a:hover { 
-  color: #fff; 
-  background: #72c02c; 
+.tab-v1 .nav-tabs > li > a:hover {
+  color: #fff;
+  background: #72c02c;
 }
 
-.tab-v1 .tab-content { 
+.tab-v1 .tab-content {
   padding: 10px 0;
 }
 
 .tab-v1 .tab-content img {
   margin-top: 4px;
-  margin-bottom: 15px; 
+  margin-bottom: 15px;
 }
 
 .tab-v1 .tab-content img.img-tab-space {
@@ -762,14 +764,14 @@ h3.title-v3-xs {
 .pagination li a:hover {
    color: #fff;
    background: #5fb611;
-   border-color: #5fb611;   
+   border-color: #5fb611;
 }
 
-.pagination > .active > a, 
-.pagination > .active > span, 
-.pagination > .active > a:hover, 
-.pagination > .active > span:hover, 
-.pagination > .active > a:focus, 
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
 .pagination > .active > span:focus {
    border-color: #72c02c;
    background-color: #72c02c;
@@ -781,11 +783,11 @@ h3.title-v3-xs {
 }
 
 /*Pager*/
-.pager li > a:hover, 
+.pager li > a:hover,
 .pager li > a:focus {
    color: #fff;
    background: #5fb611;
-   border-color: #5fb611;   
+   border-color: #5fb611;
 }
 
 /*Sidebar Menu
@@ -807,10 +809,10 @@ h3.title-v3-xs {
 .sidebar-nav-v1 > li.active,
 .sidebar-nav-v1 > li.active:hover {
   background: #717984;
-} 
+}
 
-.sidebar-nav-v1 > li.active, 
-.sidebar-nav-v1 > li.active:hover, 
+.sidebar-nav-v1 > li.active,
+.sidebar-nav-v1 > li.active:hover,
 .sidebar-nav-v1 > li.active:focus {
   border-color: #ddd;
 }
@@ -834,7 +836,7 @@ h3.title-v3-xs {
   color: #585f69;
   font-size: 12px;
   border-top: solid 1px #ddd;
-  padding: 6px 30px 6px 17px; 
+  padding: 6px 30px 6px 17px;
 }
 
 .sidebar-nav-v1 ul li:hover a,
@@ -859,7 +861,7 @@ h3.title-v3-xs {
 .sidebar-nav-v1 ul li span.badge {
   margin-top: 8px;
   font-size: 11px;
-  padding: 3px 5px; 
+  padding: 3px 5px;
   margin-right: 10px;
 }
 
@@ -932,7 +934,7 @@ a.btn-u-lg {
 .btn-u-xs,
 a.btn-u-xs {
    font-size: 12px;
-   padding: 2px 12px;   
+   padding: 2px 12px;
    line-height: 18px;
 }
 
@@ -941,7 +943,7 @@ a.btn-u-xs {
    padding: 3px 13px;
 }
 
-.btn-group > .btn-u, 
+.btn-group > .btn-u,
 .btn-group-vertical > .btn-u {
    float: left;
    position: relative;
@@ -952,13 +954,13 @@ a.btn-u-xs {
 }
 
 /*For FF Only*/
-@-moz-document url-prefix() { 
+@-moz-document url-prefix() {
    .footer-subsribe .btn-u {
       padding-bottom: 4px;
    }
 }
-@media (max-width: 768px) { 
-   @-moz-document url-prefix() { 
+@media (max-width: 768px) {
+   @-moz-document url-prefix() {
       .btn-u {
          padding-bottom: 6px;
       }
@@ -966,10 +968,10 @@ a.btn-u-xs {
 }
 
 /*Buttons Color*/
-.btn-u:hover, 
-.btn-u:focus, 
-.btn-u:active, 
-.btn-u.active, 
+.btn-u:hover,
+.btn-u:focus,
+.btn-u:active,
+.btn-u.active,
 .open .dropdown-toggle.btn-u {
    background: #5fb611;
 }
@@ -992,22 +994,20 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-u-red {
-   background: #e74c3c;
+   background: #DF1500;
 }
 .btn-u.btn-u-red:hover,
 .btn-u.btn-u-red:focus,
 .btn-u.btn-u-red:active,
 .btn-u.btn-u-red.active,
 .open .dropdown-toggle.btn-u.btn-u-red {
-   background: #c0392b;
+   background: #CC1300;
 }
 .btn-u.btn-u-split-red.dropdown-toggle {
-   border-left: solid 1px #c0392b;
+   border-left: solid 1px #CC1300;
 }
 
 .btn-u.btn-u-orange {
-    //background: #e67e22;
-    //background: #D04F1D;
     background: #d8531e;
 }
 .btn-u.btn-u-orange:hover,
@@ -1015,25 +1015,25 @@ a.btn-u-xs {
 .btn-u.btn-u-orange:active,
 .btn-u.btn-u-orange.active,
 .open .dropdown-toggle.btn-u.btn-u-orange {
-   background: #d35400;
+   background: #C33E09;
 }
 .btn-u.btn-u-split-orange.dropdown-toggle {
-   border-left: solid 1px #d35400;
+   border-left: solid 1px #C33E09;
 }
 
-.btn-u.btn-u-sea {
-   background: #1abc9c;
+.btn-u.btn-u-augreen {
+   background: #49A942;
 }
 
-.btn-u.btn-u-sea:hover,
-.btn-u.btn-u-sea:focus,
-.btn-u.btn-u-sea:active,
-.btn-u.btn-u-sea.active,
-.open .dropdown-toggle.btn-u.btn-u-sea {
-   background: #16a085;
+.btn-u.btn-u-augreen:hover,
+.btn-u.btn-u-augreen:focus,
+.btn-u.btn-u-augreen:active,
+.btn-u.btn-u-augreen.active,
+.open .dropdown-toggle.btn-u.btn-u-augreen {
+   background: #2B8F26;
 }
-.btn-u.btn-u-split-sea.dropdown-toggle {
-   border-left: solid 1px #16a085;
+.btn-u.btn-u-split-augreen.dropdown-toggle {
+   border-left: solid 1px #2B8F26;
 }
 
 .btn-u.btn-u-green {
@@ -1065,7 +1065,7 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-u-default {
-   background: #95a5a6;
+   background: #9C9FA5;
 }
 .btn-u.btn-u-default:hover,
 .btn-u.btn-u-default:focus,
@@ -1121,17 +1121,17 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-u-dark-blue {
-   background: #4765a0;
+   background: #00467F ;
 }
 .btn-u.btn-u-dark-blue:hover,
 .btn-u.btn-u-dark-blue:focus,
 .btn-u.btn-u-dark-blue:active,
 .btn-u.btn-u-dark-blue.active,
 .open .dropdown-toggle.btn-u.btn-u-dark-blue {
-   background: #324c80;
+   background: #02355F;
 }
 .btn-u.btn-u-split-dark.dropdown-toggle {
-   border-left: solid 1px #324c80;
+   border-left: solid 1px #02355F;
 }
 
 .btn-u.btn-u-light-green {
@@ -1222,36 +1222,36 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-brd.btn-u-red {
-  border-color: #e74c3c;
+  border-color: #DF1500;
 }
 .btn-u.btn-brd.btn-u-red:hover {
-  color: #c0392b;
-  border-color: #c0392b;
+  color: #CC1300;
+  border-color: #CC1300;
 }
 .btn-u.btn-brd.btn-u-red.btn-brd-hover:hover {
-   background: #c0392b;
+   background: #CC1300;
 }
 
 .btn-u.btn-brd.btn-u-orange {
   border-color: #e67e22;
 }
 .btn-u.btn-brd.btn-u-orange:hover {
-  color: #d35400;
-  border-color: #d35400;
+  color: #C33E09;
+  border-color: #C33E09;
 }
 .btn-u.btn-brd.btn-u-orange.btn-brd-hover:hover {
-   background: #d35400;
+   background: #C33E09;
 }
 
-.btn-u.btn-brd.btn-u-sea {
-  border-color: #1abc9c;
+.btn-u.btn-brd.btn-u-augreen {
+  border-color: #49A942;
 }
-.btn-u.btn-brd.btn-u-sea:hover {
-  color: #16a085;
-  border-color: #16a085;
+.btn-u.btn-brd.btn-u-augreen:hover {
+  color: #2B8F26;
+  border-color: #2B8F26;
 }
-.btn-u.btn-brd.btn-u-sea.btn-brd-hover:hover {
-   background: #16a085;
+.btn-u.btn-brd.btn-u-augreen.btn-brd-hover:hover {
+   background: #2B8F26;
 }
 
 .btn-u.btn-brd.btn-u-green {
@@ -1277,7 +1277,7 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-brd.btn-u-default {
-  border-color: #95a5a6;
+  border-color: #9C9FA5;
 }
 .btn-u.btn-brd.btn-u-default:hover {
   color: #7f8c8d;
@@ -1343,14 +1343,14 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-brd.btn-u-dark-blue {
-  border-color: #4765a0;
+  border-color: #00467F ;
 }
 .btn-u.btn-brd.btn-u-dark-blue:hover {
-  color: #324c80;
-  border-color: #324c80;
+  color: #02355F;
+  border-color: #02355F;
 }
 .btn-u.btn-brd.btn-u-dark-blue.btn-brd-hover:hover {
-   background: #324c80;
+   background: #02355F;
 }
 
 .btn-u.btn-brd.btn-u-light-green {
@@ -1403,7 +1403,7 @@ span.badge-blue {
 
 span.label-red,
 span.badge-red {
-  background: #e74c3c;
+  background: #DF1500;
 }
 
 span.label-green,
@@ -1411,9 +1411,9 @@ span.badge-green {
   background: #2ecc71;
 }
 
-span.label-sea,
-span.badge-sea {
-  background: #1abc9c;
+span.label-augreen,
+span.badge-augreen {
+  background: #49A942;
 }
 
 span.label-orange,
@@ -1443,7 +1443,7 @@ span.badge-brown {
 
 span.label-dark-blue,
 span.badge-dark-blue {
-  background: #4765a0;
+  background: #00467F ;
 }
 
 span.label-light-green,
@@ -1697,7 +1697,7 @@ i.icon-4x.icon-line {
 /*Icons Color*/
 i.icon-color-u,
 i.icon-color-red,
-i.icon-color-sea,
+i.icon-color-augreen,
 i.icon-color-dark,
 i.icon-color-grey,
 i.icon-color-blue,
@@ -1722,12 +1722,12 @@ i.icon-color-blue {
    border: solid 1px #3498db;
 }
 i.icon-color-red {
-   color: #e74c3c;
-   border: solid 1px #e74c3c;
+   color: #DF1500;
+   border: solid 1px #DF1500;
 }
-i.icon-color-sea {
-   color: #1abc9c;
-   border: solid 1px #1abc9c;
+i.icon-color-augreen {
+   color: #49A942;
+   border: solid 1px #49A942;
 }
 i.icon-color-green {
    color: #2ecc71;
@@ -1742,8 +1742,8 @@ i.icon-color-orange {
    border: solid 1px #e67e22;
 }
 i.icon-color-grey {
-   color: #95a5a6;
-   border: solid 1px #95a5a6;
+   color: #9C9FA5;
+   border: solid 1px #9C9FA5;
 }
 i.icon-color-purple {
    color: #9b6bcc;
@@ -1758,8 +1758,8 @@ i.icon-color-brown {
    border: solid 1px #9c8061;
 }
 i.icon-color-dark-blue {
-   color: #4765a0;
-   border: solid 1px #4765a0;
+   color: #00467F ;
+   border: solid 1px #00467F ;
 }
 i.icon-color-light-green {
    color: #79d5b3;
@@ -1777,7 +1777,7 @@ i.icon-color-light-grey {
 /*Icons Background Color*/
 i.icon-bg-u,
 i.icon-bg-red,
-i.icon-bg-sea,
+i.icon-bg-augreen,
 i.icon-bg-dark,
 i.icon-bg-darker,
 i.icon-bg-grey,
@@ -1802,10 +1802,10 @@ i.icon-bg-blue {
    background: #3498db;
 }
 i.icon-bg-red {
-   background: #e74c3c;
+   background: #DF1500;
 }
-i.icon-bg-sea {
-   background: #1abc9c;
+i.icon-bg-augreen {
+   background: #49A942;
 }
 i.icon-bg-green {
    background: #2ecc71;
@@ -1817,7 +1817,7 @@ i.icon-bg-orange {
    background: #e67e22;
 }
 i.icon-bg-grey {
-   background: #95a5a6;
+   background: #9C9FA5;
 }
 i.icon-bg-dark {
    background: #555;
@@ -1835,7 +1835,7 @@ i.icon-bg-brown {
    background: #9c8061;
 }
 i.icon-bg-dark-blue {
-   background: #4765a0;
+   background: #00467F ;
 }
 i.icon-bg-light-green {
    background: #79d5b3;
@@ -2066,13 +2066,13 @@ i.icon-bg-light-grey {
   background: #3498db;
 }
 .service-block-red {
-  background: #e74c3c;
+  background: #DF1500;
 }
-.service-block-sea {
-  background: #1abc9c;
+.service-block-augreen {
+  background: #49A942;
 }
 .service-block-grey {
-  background: #95a5a6;
+  background: #9C9FA5;
 }
 .service-block-yellow {
   background: #f1c40f;
@@ -2093,7 +2093,7 @@ i.icon-bg-light-grey {
   background: #9c8061;
 }
 .service-block-dark-blue {
-  background: #4765a0;
+  background: #00467F ;
 }
 .service-block-light-green {
   background: #79d5b3;
@@ -2167,7 +2167,7 @@ i.icon-bg-light-grey {
 
 /*Red Funny Box*/
 .funny-boxes-red {
-  background: #e74c3c;
+  background: #DF1500;
 }
 
 /*Blue Funny Box*/
@@ -2177,21 +2177,21 @@ i.icon-bg-light-grey {
 
 /*Grey Funny Box*/
 .funny-boxes-grey {
-  background: #95a5a6;
+  background: #9C9FA5;
 }
 
 /*Turquoise Funny Box*/
-.funny-boxes-sea {
-  background: #1abc9c;
+.funny-boxes-augreen {
+  background: #49A942;
 }
 
 /*Turquoise Top Bordered Funny Box*/
-.funny-boxes-top-sea {
-  border-top: solid 2px #1abc9c;
+.funny-boxes-top-augreen {
+  border-top: solid 2px #49A942;
 }
 
-.funny-boxes-top-sea:hover {
-  border-top-color: #16a085;
+.funny-boxes-top-augreen:hover {
+  border-top-color: #2B8F26;
 }
 
 /*Yellow Top Bordered Funny Box**/
@@ -2209,7 +2209,7 @@ i.icon-bg-light-grey {
 }
 
 .funny-boxes-left-orange:hover {
-  border-left-color: #d35400;
+  border-left-color: #C33E09;
 }
 
 /*Green Left Bordered Funny Box**/
@@ -2271,10 +2271,10 @@ i.icon-bg-light-grey {
    background: #3498db;
 }
 .text-highlights-red {
-   background: #e74c3c;
+   background: #DF1500;
 }
-.text-highlights-sea {
-   background: #1abc9c;
+.text-highlights-augreen {
+   background: #49A942;
 }
 .text-highlights-orange {
    background: #e67e22;
@@ -2292,7 +2292,7 @@ i.icon-bg-light-grey {
    background: #9c8061;
 }
 .text-highlights-dark-blue {
-   background: #4765a0;
+   background: #00467F ;
 }
 .text-highlights-light-green {
    background: #79d5b3;
@@ -2304,7 +2304,7 @@ i.icon-bg-light-grey {
 }
 
 .text-border-default {
-   border-color: #95a5a6;
+   border-color: #9C9FA5;
 }
 .text-border-green {
    border-color: #72c02c;
@@ -2313,7 +2313,7 @@ i.icon-bg-light-grey {
    border-color: #3498db;
 }
 .text-border-red {
-   border-color: #e74c3c;
+   border-color: #DF1500;
 }
 .text-border-yellow {
    border-color: #f1c40f;
@@ -2732,11 +2732,11 @@ blockquote.hero.hero-default small {
 
 /*Panel Red*/
 .panel-red {
-   border-color: #e74c3c;
+   border-color: #DF1500;
 }
 
 .panel-red > .panel-heading {
-   background: #e74c3c;
+   background: #DF1500;
 }
 
 /*Panel Green*/
@@ -2748,13 +2748,13 @@ blockquote.hero.hero-default small {
    background: #2ecc71;
 }
 
-/*Panel Sea*/
-.panel-sea {
-   border-color: #1abc9c;
+/*Panel augreen*/
+.panel-augreen {
+   border-color: #49A942;
 }
 
-.panel-sea > .panel-heading {
-   background: #1abc9c;
+.panel-augreen > .panel-heading {
+   background: #49A942;
 }
 
 /*Panel Orange*/
@@ -2777,11 +2777,11 @@ blockquote.hero.hero-default small {
 
 /*Panel Grey*/
 .panel-grey {
-   border-color: #95a5a6;
+   border-color: #9C9FA5;
 }
 
 .panel-grey > .panel-heading {
-   background: #95a5a6;
+   background: #9C9FA5;
 }
 
 /*Panel Dark*/
@@ -2822,11 +2822,11 @@ blockquote.hero.hero-default small {
 
 /*Panel Dark Blue*/
 .panel-dark-blue {
-   border-color: #4765a0;
+   border-color: #00467F ;
 }
 
 .panel-dark-blue > .panel-heading {
-   background: #4765a0;
+   background: #00467F ;
 }
 
 /*Panel Light Green*/
@@ -2895,7 +2895,7 @@ blockquote.hero.hero-default small {
 }
 
 .progress-bar-red {
-  background: #e74c3c;
+  background: #DF1500;
 }
 
 .progress-bar-purple {
@@ -2911,7 +2911,7 @@ blockquote.hero.hero-default small {
 }
 
 .progress-bar-dark-blue {
-  background: #4765a0;
+  background: #00467F ;
 }
 
 .progress-bar-light-green {
@@ -3184,11 +3184,11 @@ img.image-md {
 
 /*Text Colors
 ------------------------------------*/
-.color-sea { color: #1abc9c;}
-.color-red { color: #e74c3c;}
+.color-augreen { color: #49A942;}
+.color-red { color: #DF1500;}
 .color-aqua { color: #27d7e7;}
 .color-blue { color: #3498db;}
-.color-grey { color: #95a5a6;}
+.color-grey { color: #9C9FA5;}
 .color-dark { color: #555555;}
 .color-green { color: #72c02c;}
 .color-brown { color: #9c8061;}
@@ -3197,14 +3197,14 @@ img.image-md {
 .color-yellow { color: #f1c40f;}
 .color-green1 { color: #2ecc71;}
 .color-purple { color: #9b6bcc;}
-.color-dark-blue { color: #4765a0;}
+.color-dark-blue { color: #00467F ;}
 .color-light-grey { color: #585f69;}
 .color-light-green { color: #79d5b3;}
 
 /*Background Colors
 ------------------------------------*/
 .bg-color-dark,
-.bg-color-sea,
+.bg-color-augreen,
 .bg-color-red,
 .bg-color-aqua,
 .bg-color-blue,
@@ -3225,18 +3225,18 @@ img.image-md {
 }
 .bg-color-dark { background-color: #555 !important;}
 .bg-color-white { background-color: #fff !important;}
-.bg-color-sea { background-color: #1abc9c !important;}
-.bg-color-red { background-color: #e74c3c !important;}
+.bg-color-augreen { background-color: #49A942 !important;}
+.bg-color-red { background-color: #DF1500 !important;}
 .bg-color-aqua { background-color: #27d7e7 !important;}
 .bg-color-blue { background-color: #3498db !important;}
-.bg-color-grey { background-color: #95a5a6 !important;}
+.bg-color-grey { background-color: #9C9FA5 !important;}
 .bg-color-light { background-color: #f7f7f7 !important;}
 .bg-color-green { background-color: #72c02c !important;}
 .bg-color-brown { background-color: #9c8061 !important;}
 .bg-color-orange { background-color: #e67e22 !important;}
 .bg-color-green1 { background-color: #2ecc71 !important;}
 .bg-color-purple { background-color: #9b6bcc !important;}
-.bg-color-dark-blue { background-color: #4765a0 !important;}
+.bg-color-dark-blue { background-color: #00467F  !important;}
 .bg-color-light-grey { background-color: #585f69 !important;}
 .bg-color-light-green { background-color: #79d5b3 !important;}
 
