--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,8 @@
 */
 
 /*Import Global Compulsory CSS Files*/
-@import url(app.css);
+/*@import url(app.css);*/
+@import url(app_aucolors.css);
 @import url(ie8.css);
 @import url(blocks.css);
 @import url(plugins.css);
@@ -40,12 +41,12 @@ li a {
 
 a {
    color: #72c02c;
-   text-decoration: none;  
+   text-decoration: none;
 }
 
 a,
-a:focus, 
-a:hover, 
+a:focus,
+a:hover,
 a:active {
    outline: 0 !important;
 }
@@ -74,13 +75,13 @@ a:hover {
 /*Parallax Counter
 ------------------------------------*/
 .parallax-bg {
-	background: url(../img/blur/img1.jpg) 50% 0 repeat fixed;		
+	background: url(../img/blur/img1.jpg) 50% 0 repeat fixed;
 }
 
 /*Parallax Counter Block*/
 .parallax-counter {
 	padding: 60px 0;
-	background: url(../img/bg/9.jpg) 50% 0 no-repeat fixed;	
+	background: url(../img/bg/9.jpg) 50% 0 no-repeat fixed;
 }
 
 .parallax-counter h4 {
@@ -143,7 +144,7 @@ a:hover {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%; 
+	height: 100%;
 	content: " ";
 	position: absolute;
 	background: rgba(0,0,0,0.02);
@@ -151,7 +152,7 @@ a:hover {
 
 .parallax-counter-v2 .counters {
 	padding: 20px 0;
-	border-bottom: solid 2px #ddd; 
+	border-bottom: solid 2px #ddd;
 	background: rgba(255,255,255,0.9);
 }
 
@@ -180,7 +181,7 @@ a:hover {
 /*Parallax Team
 ------------------------------------*/
 .parallax-team {
-	background: url(../img/team/faces.jpg) 50% 0 repeat fixed;	
+	background: url(../img/team/faces.jpg) 50% 0 repeat fixed;
 }
 
 .parallax-team,
@@ -192,7 +193,7 @@ a:hover {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%; 
+	height: 100%;
 	content: " ";
 	position: absolute;
 	background: rgba(255,255,255,0.9);
@@ -216,7 +217,7 @@ a:hover {
 	line-height: 35px;
 	font-weight: normal;
 	margin-bottom: 12px;
-	font-family: 'Open Sans', sans-serif; 	
+	font-family: 'Open Sans', sans-serif;
 }
 
 .purchase .btn-buy {
@@ -249,7 +250,7 @@ a:hover {
 
 /*Service*/
 .service {
-	overflow: hidden; 
+	overflow: hidden;
 	margin-bottom: 10px;
 	padding: 15px 15px 10px;
 }
@@ -266,7 +267,7 @@ a:hover {
 }
 
 .service .desc {
-	padding: 0 15px; 
+	padding: 0 15px;
 	overflow: hidden;
 }
 .service .desc h4 {
@@ -278,7 +279,7 @@ a:hover {
 	float: left;
 	padding: 10px;
 	color: #72c02c;
-	font-size: 35px;  
+	font-size: 35px;
 	text-align: center;
     -webkit-transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out;
@@ -461,7 +462,7 @@ a:hover {
 }
 
 .social-icons li {
-	margin: 0; 
+	margin: 0;
 }
 
 .social-icons li a {
@@ -469,7 +470,7 @@ a:hover {
 }
 
 /*Breadcrumbs
-------------------------------------*/ 
+------------------------------------*/
 /*Default Breadcrumbs*/
 .breadcrumbs {
 	overflow: hidden;
@@ -483,7 +484,7 @@ a:hover {
 	margin-top: 8px;
 }
 
-.breadcrumb { 
+.breadcrumb {
 	top: 10px;
 	padding-right: 0;
 	background: none;
@@ -523,12 +524,12 @@ a.thumbnail {
 	margin-bottom: 15px;
 }
 
-.thumbnail-style { 
+.thumbnail-style {
 	padding: 7px;
-	margin-bottom: 20px; 
+	margin-bottom: 20px;
 }
-.thumbnail-style:hover { 
-	box-shadow: 0 0 8px #ddd; 
+.thumbnail-style:hover {
+	box-shadow: 0 0 8px #ddd;
     -webkit-transition: box-shadow 0.2s ease-in-out;
     -moz-transition: box-shadow 0.2s ease-in-out;
     -o-transition: box-shadow 0.2s ease-in-out;
@@ -564,7 +565,7 @@ a.thumbnail {
 	padding: 1px 6px;
 	position: absolute;
 	background: #72c02c;
-	display: inline-block; 
+	display: inline-block;
 }
 .thumbnail-style a.btn-more:hover {
 	text-decoration: none;
@@ -591,11 +592,11 @@ a.thumbnail {
    -ms-transform: scale(1.2) rotate(2deg);
    transform: scale(1.2) rotate(2deg);
 }
- 
+
 /*Servive Blocks
 ------------------------------------*/
 /*Service Alternative Block*/
-.service-alternative .service:hover { 
+.service-alternative .service:hover {
 	background: #76ca2c;
     -webkit-transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out;
@@ -604,7 +605,7 @@ a.thumbnail {
 }
 .service-alternative .service:hover i,
 .service-alternative .service:hover p,
-.service-alternative .service:hover h4 { 
+.service-alternative .service:hover h4 {
 	color: #fff;
 }
 
@@ -620,49 +621,49 @@ a.thumbnail {
 }
 
 /*Blog Posts
-------------------------------------*/ 
+------------------------------------*/
 .posts .dl-horizontal a {
 	color: #555;
 }
 
-.posts .dl-horizontal { 
+.posts .dl-horizontal {
 	margin-bottom: 15px;
 	overflow: hidden;
 }
 
-.posts .dl-horizontal dt { 
-	width: 60px; 
+.posts .dl-horizontal dt {
+	width: 60px;
 	float: left;
 }
 
-.posts .dl-horizontal dt img { 
-	width: 60px; 
+.posts .dl-horizontal dt img {
+	width: 60px;
 	height: 60px;
 	padding: 2px;
-	margin-top: 2px; 
+	margin-top: 2px;
 	border: solid 1px #ddd;
 }
 
-.posts .dl-horizontal dd { 
+.posts .dl-horizontal dd {
 	margin-left: 70px;
 }
 
-.posts .dl-horizontal dd p { 
+.posts .dl-horizontal dd p {
 	margin: 0;
 }
 
 .posts .dl-horizontal dd a {
 	font-size: 14px;
-	line-height: 16px !important; 
+	line-height: 16px !important;
 }
 
-.posts .dl-horizontal dd a:hover { 
-	color: #72c02c; 
+.posts .dl-horizontal dd a:hover {
+	color: #72c02c;
 	text-decoration: none;
 }
 
 .posts .dl-horizontal:hover dt img,
-.posts .dl-horizontal:hover dd a { 
+.posts .dl-horizontal:hover dd a {
 	color: #72c02c;
 	border-color: #72c02c !important;
 	-webkit-transition: all 0.2s ease-in-out;
@@ -673,7 +674,7 @@ a.thumbnail {
 
 /*About Page
 ------------------------------------*/
-.team ul.team-socail { 
+.team ul.team-socail {
 	text-align: right;
 }
 
@@ -758,7 +759,7 @@ a.thumbnail {
 
 /*About Skills*/
 .about-skills {
-	padding: 40px 0; 	
+	padding: 40px 0;
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid #eee;
 	background: url(../img/breadcrumbs.png) repeat;
@@ -795,7 +796,7 @@ a.thumbnail {
 }
 .portfolio-item li {
 	padding: 3px 0;
-} 
+}
 .portfolio-item p a {
 	text-decoration: underline;
 }
@@ -881,29 +882,29 @@ ul.blog-tags a:hover i {
 	-o-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;	
+	-webkit-transition: all 0.3s ease-in-out;
 }
 
 .blog-twitter .blog-twitter-inner:after,
 .blog-twitter .blog-twitter-inner:before {
-	width: 0; 
+	width: 0;
 	height: 0;
 	right: 0px;
 	bottom: 0px;
-	content: " "; 
-	display: block; 
+	content: " ";
+	display: block;
 	position: absolute;
 }
 
 .blog-twitter .blog-twitter-inner:after {
-	border-top: 15px solid #eee;	
+	border-top: 15px solid #eee;
 	border-right: 15px solid transparent;
 	border-left: 0px solid transparent;
 	border-left-style: inset; /*FF fixes*/
 	border-right-style: inset; /*FF fixes*/
 }
 .blog-twitter .blog-twitter-inner:before {
-	border-bottom: 15px solid #fff;	
+	border-bottom: 15px solid #fff;
 	border-right: 0 solid transparent;
 	border-left: 15px solid transparent;
 	border-left-style: inset; /*FF fixes*/
@@ -912,16 +913,16 @@ ul.blog-tags a:hover i {
 
 .blog-twitter .blog-twitter-inner:hover {
 	border-color: #72c02c;
-	border-top-color: #72c02c;	
+	border-top-color: #72c02c;
 }
 .blog-twitter .blog-twitter-inner:hover:after {
-	border-top-color: #72c02c;	
+	border-top-color: #72c02c;
 }
 
 .blog-twitter .blog-twitter-inner span.twitter-time {
 	color: #777;
 	display: block;
-	font-size: 11px; 
+	font-size: 11px;
 }
 
 .blog-twitter .blog-twitter-inner a {
@@ -940,19 +941,19 @@ ul.blog-tags a:hover i {
 }
 
 /*Choose Block*/
-.who li { 
+.who li {
 	margin-bottom: 6px;
 }
-.who li i { 
-	color: #72c02c; 
+.who li i {
+	color: #72c02c;
 	font-size: 13px;
 	min-width: 15px;
 	margin-right: 8px;
 	text-align: center;
-	position: relative; 
+	position: relative;
 }
-.who li:hover i, 
-.who li:hover a { 
+.who li:hover i,
+.who li:hover a {
 	color: #777;
 }
 .who li:hover a:hover {
@@ -971,7 +972,7 @@ ul.blog-tags a:hover i {
 	background: url(../img/bg-black.png) repeat;
 }
 
-.slider-promo-info span.big-size { 
+.slider-promo-info span.big-size {
 	color: #fff;
 	display: block;
 	font-size: 30px;
@@ -1007,11 +1008,11 @@ ul.blog-tags a:hover i {
 	color: #555;
 	display: block;
 	font-size: 20px;
-	font-weight: 200; 
+	font-weight: 200;
 	margin: 20px 0 15px;
 }
 
-.promo-box:hover strong, 
+.promo-box:hover strong,
 .promo-box:hover strong a {
 	color: #72c02c;
 }
@@ -1056,13 +1057,13 @@ ul.blog-tags a:hover i {
 }
 
 .block-blockquote {
-	margin: 20px 0; 
+	margin: 20px 0;
 	text-align: center;
 	border: dashed 1px #ccc;
 }
 
 .block-blockquote-inner {
-	padding: 15px; 
+	padding: 15px;
 }
 
 .block-blockquote p {
@@ -1080,7 +1081,7 @@ ul.blog-tags a:hover i {
     -webkit-transition:all 0.2s ease-in-out;
     -moz-transition:all 0.2s ease-in-out;
     -o-transition:all 0.2s ease-in-out;
-    transition:all 0.2s ease-in-out;	
+    transition:all 0.2s ease-in-out;
 }
 
 .info-blocks i.icon-info-blocks {
@@ -1157,15 +1158,15 @@ ul.labels-demo li {
 
 @media (max-width: 768px) {
 	.line-icon-page .item-box {
-		height: 115px;    
+		height: 115px;
   	}
 }
 
-@media (max-width: 450px) { 
-	.line-icon-page .item-box { 
-		height: 130px;     
-	} 
-} 
+@media (max-width: 450px) {
+	.line-icon-page .item-box {
+		height: 130px;
+	}
+}
 
 .line-icon-page .item-box:hover {
 	background: #fafafa;
@@ -1295,7 +1296,7 @@ ul.labels-demo li {
 /*Contact Pages
 ------------------------------------*/
 .map {
-	width: 100%; 
+	width: 100%;
 	height: 350px;
 	border-top: solid 1px #eee;
 	border-bottom: solid 1px #eee;
@@ -1327,7 +1328,7 @@ ul.labels-demo li {
     top: -10px;
     right: -100px;
     background-color: rgba(255,255,255,0.1);
-    transform: rotate(55deg);   
+    transform: rotate(55deg);
     -o-transform: rotate(55deg);
     -ms-transform: rotate(55deg);
     -moz-transform: rotate(55deg);
@@ -1377,7 +1378,7 @@ ul.labels-demo li {
 }
 
 .easy-block-v1 .overflow-h h3 {
-	width: 60%;	
+	width: 60%;
 	float: left;
 	font-size: 18px;
 	line-height: 24px;
@@ -1415,7 +1416,7 @@ ul.labels-demo li {
 	position: absolute;
 	text-align: center;
 	letter-spacing: 2px;
-	transform: rotate(45deg);   
+	transform: rotate(45deg);
 	-o-transform: rotate(45deg);
 	-ms-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
@@ -1431,14 +1432,14 @@ ul.labels-demo li {
 	padding: 30px 20px 20px;
 }
 
-.easy-block-v3.first { 
-	background: #696f77; 
+.easy-block-v3.first {
+	background: #696f77;
 }
-.easy-block-v3.second { 
-	background: #707780; 
+.easy-block-v3.second {
+	background: #707780;
 }
-.easy-block-v3.third { 
-	background: #787f88; 
+.easy-block-v3.third {
+	background: #787f88;
 }
 
 .easy-block-v3 i {
@@ -1584,7 +1585,7 @@ ul.labels-demo li {
 ------------------------------------*/
 .simple-block {
 	margin-bottom: 20px;
-}	
+}
 
 .simple-block img {
 	width: 100%;
@@ -1657,7 +1658,7 @@ ul.labels-demo li {
 }
 
 .three-blocks-in h3 {
-	font-size: 20px;	
+	font-size: 20px;
 	margin-bottom: 7px;
 }
 
@@ -1688,7 +1689,7 @@ ul.labels-demo li {
 	border: 1px solid #fff;
 }
 
-.banner-info.dark i { 
+.banner-info.dark i {
 	background: #585f69;
 }
 
@@ -1910,14 +1911,14 @@ ul.labels-demo li {
 }
 
 .status-bar-in:after {
-	width: 0; 
+	width: 0;
 	height: 0;
 	top: -10px;
 	left: 50px;
-	content: " "; 
-	display: block; 
+	content: " ";
+	display: block;
 	position: absolute;
-	border-bottom: 11px solid #f0f0f0;	
+	border-bottom: 11px solid #f0f0f0;
 	border-left: 11px solid transparent;
 	border-right: 11px solid transparent;
 	border-left-style: inset; /*FF fixes*/
@@ -2187,7 +2188,7 @@ img.img-mouse {
 ------------------------------------*/
 .testimonials-bs {
   padding: 50px 0;
-  background: url(../img/bg/16.jpg) 50% 0 repeat fixed;  
+  background: url(../img/bg/16.jpg) 50% 0 repeat fixed;
 }
 
 .testimonials-bs .headline-center-v2 span.author {
